[gd_scene load_steps=13 format=3 uid="uid://bhxdr0hkjjdby"]

[ext_resource type="Script" uid="uid://bb4or323ojirr" path="res://scripts/main.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Player.tscn" id="2"]
[ext_resource type="Script" uid="uid://bfrsw2ndsq8vw" path="res://scripts/upgrade_panel.gd" id="3"]
[ext_resource type="Script" uid="uid://3lrlwclg3uu4" path="res://scripts/shop_panel.gd" id="4"]
[ext_resource type="Script" uid="uid://d2x56ohp5h2kw" path="res://scripts/notifications.gd" id="5"]
[ext_resource type="Script" uid="uid://di5j080j20vmr" path="res://scripts/bullet_pool.gd" id="6"]
[ext_resource type="Script" uid="uid://dyulqvr1xh5o5" path="res://scripts/enemy_pool.gd" id="7"]
[ext_resource type="Script" uid="uid://b1ip1ksoqollc" path="res://scripts/turret_pool.gd" id="8"]
[ext_resource type="Script" uid="uid://7nc3yeerum8l" path="res://scripts/arena_bounds.gd" id="9"]
[ext_resource type="Script" uid="uid://c4okqu8rvwqw8" path="res://scripts/pause_panel.gd" id="10"]
[ext_resource type="Script" uid="uid://d1jjya7efdky8" path="res://scripts/item_summary.gd" id="11"]
[ext_resource type="Script" uid="uid://nsgytfg2e5lw" path="res://scripts/stats_panel.gd" id="12"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Player" parent="." instance=ExtResource("2")]

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 56.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="Health" type="Label" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "HP: 100"

[node name="Level" type="Label" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "  |  Lv: 1 (0/10)"

[node name="Wave" type="Label" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "  |  Wave: 1"

[node name="Time" type="Label" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "  |  Time: 20"

[node name="Score" type="Label" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "  |  Score: 0"

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameOverLabel" type="Label" parent="UI/CenterContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "GAME OVER
Press F5 in editor to run again"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradePanel" type="Panel" parent="UI"]
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("3")

[node name="VBox" type="VBoxContainer" parent="UI/UpgradePanel"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -180.0
offset_right = 300.0
offset_bottom = 180.0

[node name="Title" type="Label" parent="UI/UpgradePanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Choose an upgrade (n left)"
horizontal_alignment = 1

[node name="Options" type="HBoxContainer" parent="UI/UpgradePanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Option1" type="Button" parent="UI/UpgradePanel/VBox/Options"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Option 1"

[node name="Option2" type="Button" parent="UI/UpgradePanel/VBox/Options"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Option 2"

[node name="Option3" type="Button" parent="UI/UpgradePanel/VBox/Options"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Option 3"

[node name="Summary" type="Control" parent="UI/UpgradePanel/VBox"]
custom_minimum_size = Vector2(560, 420)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("11")

[node name="RichText" type="RichTextLabel" parent="UI/UpgradePanel/VBox/Summary"]
custom_minimum_size = Vector2(560, 420)
layout_mode = 0
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b]Items & Effects[/b]
--"
autowrap_mode = 2

[node name="ShopPanel" type="Panel" parent="UI"]
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4")

[node name="VBox" type="VBoxContainer" parent="UI/ShopPanel"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -240.0
offset_right = 360.0
offset_bottom = 240.0
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="UI/ShopPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Shop - Currency: 0"
horizontal_alignment = 1

[node name="Options" type="GridContainer" parent="UI/ShopPanel/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="Option1" type="Button" parent="UI/ShopPanel/VBox/Options"]
custom_minimum_size = Vector2(220, 110)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "Offer 1"
autowrap_mode = 2

[node name="Option2" type="Button" parent="UI/ShopPanel/VBox/Options"]
custom_minimum_size = Vector2(220, 110)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "Offer 2"
autowrap_mode = 2

[node name="Option3" type="Button" parent="UI/ShopPanel/VBox/Options"]
custom_minimum_size = Vector2(220, 110)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "Offer 3"
autowrap_mode = 2

[node name="Bottom" type="HBoxContainer" parent="UI/ShopPanel/VBox"]
layout_mode = 2
alignment = 1

[node name="Reroll" type="Button" parent="UI/ShopPanel/VBox/Bottom"]
layout_mode = 2
text = "Reroll (5$)"

[node name="StartNext" type="Button" parent="UI/ShopPanel/VBox/Bottom"]
layout_mode = 2
text = "Start Next Wave"

[node name="Summary" type="Control" parent="UI/ShopPanel/VBox"]
custom_minimum_size = Vector2(640, 420)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("11")

[node name="RichText" type="RichTextLabel" parent="UI/ShopPanel/VBox/Summary"]
custom_minimum_size = Vector2(640, 420)
layout_mode = 0
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b]Items & Effects[/b]
--"
autowrap_mode = 2

[node name="ShopNotifications" type="Control" parent="UI/ShopPanel"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -270.0
offset_right = 220.0
offset_bottom = -230.0
script = ExtResource("5")

[node name="VBox" type="VBoxContainer" parent="UI/ShopPanel/ShopNotifications"]
layout_mode = 0
alignment = 1

[node name="WeaponsPanel" type="Panel" parent="UI"]
offset_left = 16.0
offset_top = 72.0
offset_right = 260.0
offset_bottom = 260.0

[node name="VBox" type="VBoxContainer" parent="UI/WeaponsPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 8.0
offset_bottom = 8.0

[node name="Title" type="Label" parent="UI/WeaponsPanel/VBox"]
layout_mode = 2
text = "Weapons"

[node name="Slot1" type="Label" parent="UI/WeaponsPanel/VBox"]
layout_mode = 2
text = "1: --"

[node name="Slot2" type="Label" parent="UI/WeaponsPanel/VBox"]
layout_mode = 2
text = "2: --"

[node name="Slot3" type="Label" parent="UI/WeaponsPanel/VBox"]
layout_mode = 2
text = "3: --"

[node name="Slot4" type="Label" parent="UI/WeaponsPanel/VBox"]
layout_mode = 2
text = "4: --"

[node name="Slot5" type="Label" parent="UI/WeaponsPanel/VBox"]
layout_mode = 2
text = "5: --"

[node name="Slot6" type="Label" parent="UI/WeaponsPanel/VBox"]
layout_mode = 2
text = "6: --"

[node name="StatsPanel" type="Panel" parent="UI"]
visible = false
z_index = 1000
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -420.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="UI/StatsPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 8.0
offset_bottom = 8.0

[node name="Title" type="Label" parent="UI/StatsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Player Stats"
horizontal_alignment = 1

[node name="Stats" type="Control" parent="UI/StatsPanel/VBox"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("12")

[node name="Scroll" type="ScrollContainer" parent="UI/StatsPanel/VBox/Stats"]
layout_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="Host" type="VBoxContainer" parent="UI/StatsPanel/VBox/Stats/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharacterSelect" type="Panel" parent="UI"]
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="UI/CharacterSelect"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -240.0
offset_right = 320.0
offset_bottom = 240.0

[node name="Title" type="Label" parent="UI/CharacterSelect/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Choose Your Character"
horizontal_alignment = 1

[node name="DifficultyRow" type="HBoxContainer" parent="UI/CharacterSelect/VBox"]
layout_mode = 2
alignment = 1

[node name="DiffLabel" type="Label" parent="UI/CharacterSelect/VBox/DifficultyRow"]
layout_mode = 2
text = "Difficulty:"

[node name="Difficulty" type="OptionButton" parent="UI/CharacterSelect/VBox/DifficultyRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Options" type="GridContainer" parent="UI/CharacterSelect/VBox"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="PausePanel" type="Panel" parent="UI"]
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("10")

[node name="VBox" type="VBoxContainer" parent="UI/PausePanel"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -140.0
offset_right = 200.0
offset_bottom = 120.0

[node name="Title" type="Label" parent="UI/PausePanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Paused"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="UI/PausePanel/VBox"]
layout_mode = 2
text = "Resume"

[node name="Restart" type="Button" parent="UI/PausePanel/VBox"]
layout_mode = 2
text = "Restart"

[node name="Quit" type="Button" parent="UI/PausePanel/VBox"]
layout_mode = 2
text = "Quit"

[node name="Summary" type="Control" parent="UI/PausePanel/VBox"]
custom_minimum_size = Vector2(560, 420)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("11")

[node name="RichText" type="RichTextLabel" parent="UI/PausePanel/VBox/Summary"]
custom_minimum_size = Vector2(560, 420)
layout_mode = 0
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b]Items & Effects[/b]
--"
autowrap_mode = 2

[node name="Notifications" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 96.0
grow_horizontal = 2
script = ExtResource("5")

[node name="VBox" type="VBoxContainer" parent="UI/Notifications"]
layout_mode = 0
alignment = 1

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]

[node name="BulletPool" type="Node2D" parent="."]
script = ExtResource("6")

[node name="EnemyPool" type="Node2D" parent="."]
script = ExtResource("7")

[node name="TurretPool" type="Node2D" parent="."]
script = ExtResource("8")

[node name="ArenaBounds" type="Node2D" parent="."]
script = ExtResource("9")
use_viewport_bounds = true
outline_color = Color(1, 1, 1, 0.5)
outline_width = 3.0
